--- a/TODO
+++ b/TODO
@@ -1,2 +1,11 @@
-Openstack API调用statusCode不为202时错误信息的展示
-虚拟机基本操作列表action要根据vm状态变化而变化，如Active虚拟机显示pause,Pause虚拟机显示unpause
+监控软件将数据和达到阈值信息发送给消息队列
+告警模块从队列中获取虚拟机阈值信息，和用户定义的告警规则匹配，决定是否要触发一次告警；若是，则调用决策模块的资源调整
+					主机告警信息，若长时间不可达，那么调用决策模块的高可用性
+决策模块从队列中获取数据，更新资源池状态
+用户申请资源，调用决策模块的资源申请
+
+两大难点：资源池中状态维护，以及数据的更新
+资源池只关注总量和已用量，不关注负载情况
+所有的Model用mongoose的Model。这里的Model
+
+VM刚开始也要考虑从已有数据库中同步的问题
